Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignBooleanBooleanField.quorum
class Main
    boolean v = true
    action Main
        Test(v)
    end

    action Test(boolean var)
        if var = true
            output "passed"
        end
    end
end
