Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjBooleanField.quorum
class Main
    Text v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Text
        boolean var = true
        return var
    end
end